Add or update the Azure App Service build and deployment workflow config

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
             <button type="submit">Buscar</button>
         </form>
     </div>
+    <div>
+        <form action="banner.php" method="get">
+            <input type="submit" value="Ver banner">
+        </form>
+    </div>
 </body>
 </html>
