Included top-right button and reubicated legend 'Administradores'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div>
         <form action="banner.php" method="get">
-            <input type="submit" value="Ver banner">
+            <button type="submit">Ver banner</button>
         </form>
     </div>
 </body>
