--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
             <input type="text" name="busqueda" placeholder="¿carrera o puesto de trabajo?" required>
             <button type="submit">Buscar</button>
         </form>
-    </div>
-    <div>
-        <form action="banner.php" method="get">
+        <form action="banner.php" method="GET">
             <button type="submit">Ver banner</button>
         </form>
     </div>
